# cpp-semver

./: CMakeLists.txt  LICENSE.md  README.md  Semantic Version Query Language Specification.md
semver/: .natstepfilter  CMakeLists.txt  context.cpp  context.h  dllmain.cpp  framework.h  range.cpp  range.h  semver.cpp  version.cpp  version.h  versionblock.cpp  versionblock.h
semver/API/: semver.h
semver_tests/: CMakeLists.txt  RangeTests.cpp  VersionTests.cpp
